--- a/nestjs/public/css/login.css
+++ b/nestjs/public/css/login.css
@@ -51,6 +51,7 @@
     position: relative;
     align-items: center;
     justify-content: center;
+    border:1px solid black;
 }
 .login-social-google{
 
