--- a/reactjs/src/screens/login/Login.module.scss
+++ b/reactjs/src/screens/login/Login.module.scss
@@ -24,12 +24,26 @@
         }
         .loginButton{
             width:48%;
+            height: 40px;
         }
         .loginSocialButton{
             width: 100%;
+            height: 45px;
             display: flex;
-            justify-content: center;
+            position: relative;
             align-items: center;
+            justify-content: center;
+            border: none;
+            outline: none;
+            background-color: white;
+            border-radius: 4px;
+            box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+            img{
+                width: 25px;
+                height: auto;
+                position: absolute;
+                left:10%;
+            }
         }
     }
     .forgotPassword{
